Some stuff that got the FV3 post to compile.  CALWXT_BOURG avoiding random number generator for now.

--- a/sorc/fv3/hireswfv3_post.fd/sorc/ncep_post.fd/makefile_module
+++ b/sorc/fv3/hireswfv3_post.fd/sorc/ncep_post.fd/makefile_module
@@ -26,36 +26,37 @@ CPP = $(myCPP) $(myCPPFLAGS)
 CPPFLAGS = -DLINUX 
 FREE     = -FR
 
-NETCDF_INC = -I$(NETCDF)/include
+# NETCDF_INC = -I$(NETCDF)/include
 NETCDF_LDFLAGS = -L$(NETCDF)/lib -lnetcdff -lnetcdf
 
 CFLAGS   = -DLINUX -Dfunder -DFortranByte=char -DFortranInt=int -DFortranLlong='long long'
 
 FFLAGS   = $(OPTS) $(FREE) $(DEBUG) \
-           -I$(SFCIO_INC4) \
+           -I$(SFCIO_INC) \
            -I$(NEMSIO_INC) \
-           -I$(SIGIO_INC4) \
+           -I$(SIGIO_INC) \
            -I$(G2_INC4) \
            -I$(G2TMPL_INC) \
-           -I$(GFSIO_INC4) \
-           -I$(W3EMC_INC4) \
+           -I$(GFSIO_INC) \
            -I$(CRTM_INC) \
 	   -I$(IP_INC4) \
-           $(NETCDF_INC)
+	   -I$(SP_INC4) \
+	   -I$(WRF_IO_INC) \
+           -I$(NETCDF_INC)
 
-LIBS     = $(WRFIO_LIB) \
+
+LIBS     = $(WRF_IO_LIB) \
            $(G2TMPL_LIB) \
            $(G2_LIB4) \
            $(JASPER_LIB) \
            $(PNG_LIB) \
            $(Z_LIB) \
            $(NEMSIO_LIB) \
-           $(GFSIO_LIB4) \
-           $(SIGIO_LIB4) \
-           $(SFCIO_LIB4) \
+           $(GFSIO_LIB) \
+           $(SIGIO_LIB) \
+           $(SFCIO_LIB) \
            $(IP_LIB4) \
            $(SP_LIB4) \
-           $(W3EMC_LIB4) \
            $(W3NCO_LIB4) \
            $(BACIO_LIB4) \
            $(CRTM_LIB) \
