--- a/sorc/arw/hiresw_smartprecipg2.fd/makefile
+++ b/sorc/arw/hiresw_smartprecipg2.fd/makefile
@@ -6,11 +6,12 @@ OBJS=SMARTPRECIP.o
 FC =   ${COMPILER} -convert big_endian -g -traceback -assume noold_ldout_format
 
 LIBS = ${G2TMPL_LIB} ${G2_LIB4} ${JASPER_LIB} ${PNG_LIB} ${Z_LIB} \
-       ${IP_LIB4} ${W3NCO_LIB4} ${W3EMC_LIB4} ${BACIO_LIB4}
+       ${W3NCO_LIB4} ${BACIO_LIB4}
+#       ${IP_LIB4} ${W3NCO_LIB4} ${W3EMC_LIB4} ${BACIO_LIB4}
 
 INCG2=-I${G2_INC4} -I${G2TMPL_INC}
 
-FFLAGS = -O -fp-model strict -list
+FFLAGS = -O -fp-model strict -list # -ftrapuv  -check all  -fp-stack-check  -fstack-protector -g -traceback
 LDFLAGS =-FR -assume byterecl
 
 CMD =	hiresw_smartprecipg2    
