Some preliminary stuff at launching FV3 jobs.

--- a/parm/fv3/run_commands_bc.config
+++ b/parm/fv3/run_commands_bc.config
@@ -10,8 +10,8 @@
   export KMP_AFFINITY=disabled
 
 # WCOSS-cray definitions
-  export APRUNS=${APRUNS:-"aprun -b -j1 -n1 -N1 -d1 -cc depth"}
-  export APRUNF=${APRUNF:-"aprun -b -j1 -n${TOTAL_TASKS} -N${NCTSK} -d${OMP_NUM_THREADS} -cc depth cfp"}
-  export APRUNC=${APRUNC:-"aprun -b -j1 -n${TOTAL_TASKS} -N${NCTSK} -d${OMP_NUM_THREADS} -cc depth"}
+  export APRUNS=${APRUNS:-"mpiexec   -n1 -ppn1"}
+  export APRUNF=${APRUNF:-"mpiexec   -n ${TOTAL_TASKS} -N${NCTSK} -d${OMP_NUM_THREADS} cfp"}
+  export APRUNC=${APRUNC:-"mpiexec   -n ${TOTAL_TASKS} -N${NCTSK} -d${OMP_NUM_THREADS} "}
   export APRUNO="time"
   export BACKGROUND=""
